--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Test SQLite
+      Test Data Storage SQLite
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-testsqlite></app-testsqlite>
+  <app-teststore></app-teststore>
 </ion-content>
