--- a/src/app/components/teststore/teststore.component.html
+++ b/src/app/components/teststore/teststore.component.html
@@ -4,9 +4,9 @@
   </ion-item>
 </ion-list>
 <ion-card class="card-storage">
-  <p class="success1 display">
+  <p class="store-success1 display">
     The DataStore test was successful
   </p>
-  <p class="failure1 display">
+  <p class="store-failure1 display">
     The DataStore test failed
 </ion-card>
