--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,4 +9,5 @@
 <ion-content>
   <app-teststore></app-teststore>
   <app-filterkeys></app-filterkeys>
+  <app-multitables-store></app-multitables-store>
 </ion-content>
