add tests encryption Android

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,4 +10,6 @@
   <app-teststore></app-teststore>
   <app-filterkeys></app-filterkeys>
   <app-multitables-store></app-multitables-store>
+  <app-encryptastore></app-encryptastore>
+  <app-newencryptedstore></app-newencryptedstore>
 </ion-content>
