add json import/export test

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -12,4 +12,5 @@
   <app-multitables-store></app-multitables-store>
   <app-encryptastore *ngIf="native"></app-encryptastore>
   <app-newencryptedstore *ngIf="native"></app-newencryptedstore>
+  <app-testjson></app-testjson>
 </ion-content>
